# t4u

./: LICENSE  README.md
Python/: README.md  pyproject.toml  setup.py
Python/t4u/: archive.py  cmd.py  digest.py
Python/tests/: test_archive.py  test_cmd.py  test_digest.py
test-data/: sh-binary
