[tool.poetry]
name = "t4u"
version = "0.1.0"
description = ""
authors = ["Daryl.Xu <ziqiang_xu@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[[tool.poetry.source]]
name = 'tsinghua-pypi'
url = 'https://pypi.tuna.tsinghua.edu.cn/simple'
priority = 'primary'

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
